Fix styling of restart button on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,7 @@ text-decoration: none;
     button {
         font-size: 1.2rem;
         padding: 1rem;
+        margin-top: 1.2rem;
     }
 
     #explanation {
